Fixed the extra space on the right

--- a/web/themes/custom/proj_me_theme/css/style.css
+++ b/web/themes/custom/proj_me_theme/css/style.css
@@ -7601,13 +7601,13 @@ u {
 
   .block-views-blockabout-me-block-1 .views-field-field-service-skills {
     padding-top: 0px;
-    padding-right: 18px;
+    padding-right: 0px;
+    padding-left: 25px;
     text-align: left;
     width: 100%;
     margin: 0 auto;
     float: left;
-    margin-top: 55px;
-    margin-left: 26px; }
+    margin-top: 55px; }
 
   .block-views-blockabout-me-block-1 .views-field-field-biography {
     display: inline-block;
