--- a/web/themes/custom/proj_me_theme/scss/_overrides.scss
+++ b/web/themes/custom/proj_me_theme/scss/_overrides.scss
@@ -1621,13 +1621,13 @@ $base-content: #f4f4f3;
 
   .block-views-blockabout-me-block-1 .views-field-field-service-skills {
     padding-top: 0px;
-    padding-right: 18px;
+    padding-right: 0px;
+    padding-left: 25px;
     text-align: left;
     width: 100%;
     margin: 0 auto;
     float: left;
     margin-top: 55px;
-    margin-left: 26px;
   }
 
   .block-views-blockabout-me-block-1 .views-field-field-biography {
